# DQMExplore

./: .gitignore  .pre-commit-config.yaml  README.md  clientid.json  pyproject.toml  requirements.txt
configs/: rr_config.json
notebooks/: CertHelperData.ipynb  MEs.py  README.md  RunRegistryData.ipynb  dials_explore.ipynb  me1D.ipynb  me2D.ipynb  requirements.txt  trend_plotting.ipynb
scripts/: 1D_ME_Explore.py  README.md  getCHjson.py  getRRjson.py  run_all.py  utils.py
src/dqmexplore/: __init__.py  anomaly.py  certhelper.py  dataproc.py  exploreutils.py  interplt.py  me_ids.py  medata.py  oms.py  omsdata.py  omsutils.py  plotting.py  staticplt.py  statplotting.py  trends.py  utils.py
src/dqmexplore/utils/: __init__.py  datautils.py  setupdials.py
src/dqmexplr/: helper.py  plotting.py
src/utils/: setupdials.py
