[tool.poetry]
name = "dqmexplore"
version = "0.1.0"
description = "A consolidation of DQM data exploration tools."
authors = ["roy-cruz <roy.cruz@upr.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cmsdials = "^1.0.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
seaborn = "^0.13.2"
plotly = "^5.22.0"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
