[tool.poetry]
name = "dqmexplore"
description = "A consolidation of DQM data exploration tools."
version = "0.2.0"
readme = "README.md"
authors = [
    "Gabriele Benelli <gabriele.benelli@cern.ch>",
    "Roy F. Cruz <roy.cruz.candelaria@cern.ch>",
    "Tetiana Mazurets <tetiana.mazurets@cern.ch>",
    "Richa Sharma <richa.sharma@cern.ch>"
]
repository = "https://github.com/CMSTrackerDPG/DQMExplore/tree/main"
packages = [{ include = "dqmexplore", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
cmsdials = "^1.1.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
plotly = "^5.22.0"
ipykernel = { version = "^6.29.4", optional = true }
ipywidgets = { version = "^8.1.2", optional = true }
nbformat = { version = "^5.10.4", optional = true }
oms = { git = "https://github.com/roy-cruz/OMSapi.git", optional = true }

[tool.poetry.extras]
nb = [
    "ipykernel",
    "ipywidgets",
    "nbformat",
]
oms = [
    "oms"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"